--- a/_posts/2014-10-24-Grit.md
+++ b/_posts/2014-10-24-Grit.md
@@ -4,6 +4,6 @@ title: Grit, Guts, and Glory
 published: true
 ---
 
-I always tell my students that if only you have grit, guts, and glory, you will always live your life with happiness.
+I always tell my students that if only you have grit, guts, and glory, you will always live your lives with happiness.
 
 ![Grit, Guts, and Glory](http://3.bp.blogspot.com/-Syfc4-sFFU0/Ukh7tjCarLI/AAAAAAAAPMg/6fIaygW4_M4/s1600/gritGutsGloryOriginal.jpg)
