--- a/_posts/2014-10-27-Nature.md
+++ b/_posts/2014-10-27-Nature.md
@@ -7,3 +7,5 @@ published: true
 I live close to nature and I even consider myself an introvert. I always seek peace in mind through nature and enjoy beautiful sceneries.  I took this picture yesterday while I went out for a walk with my family.
 
 ![Nature](/images/nature.jpg)
+
+![My husband](/images/husband.jpg)
