--- a/_posts/2014-10-27-Nature.md
+++ b/_posts/2014-10-27-Nature.md
@@ -1,7 +1,9 @@
+
 ---
 layout: post
 title: Seek peace through nature
-published: true
+category: general
+tags: [nature]
 ---
 
 I live close to nature and I even consider myself an introvert. I always seek peace in mind through nature and enjoy beautiful sceneries.  I took this picture yesterday while I went out for a walk with my family.
